fix: prevent image/scrollbar overlap

--- a/src/styles/anniversaries.css
+++ b/src/styles/anniversaries.css
@@ -141,7 +141,7 @@ main {
 
 .sailor-moon--1 {
     top: 334px;
-    left: 830px;
+    left: 870px;
 }
 
 .sailor-moon--2 {
